--- a/src/preface.tex
+++ b/src/preface.tex
@@ -51,7 +51,7 @@ and reformatted for brevity.
 
 
 Rob Hogan \href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}\\
-Dublin 2023 \\
+Dublin 2023-2024 \\
 
 \clearpage
 \vspace*{\fill}
