--- a/src/preface.tex
+++ b/src/preface.tex
@@ -39,8 +39,7 @@ If you are reading the PDF version of this book the \hyperref[sec:appendices]{\t
 should provide hours of rewarding bedtime reading, or more likely, deep undisturbed sleep.
 
 \section*{Note on the Text}
-The version you are reading is little more than a scrapbook still many revisions away from a
-finished product. If you find the writing hard going or the attempts to explain things difficult
+If you find the writing hard going or the attempts to explain things difficult
 to follow, by all means \href{https://github.com/mwenge/iatheory/issues}{\textcolor{blue}{leave me a note}} and
 I will gratefully accept your complaint. In the meantime, please skip over any blemishes
 to the next pretty picture or promising-looking block of text.
@@ -51,7 +50,7 @@ and reformatted for brevity.
 
 
 Rob Hogan \href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}\\
-Dublin 2023-2024 \\
+Dublin, 2023 - 2024 \\
 
 \clearpage
 \vspace*{\fill}
